--- a/index.html
+++ b/index.html
@@ -219,7 +219,23 @@
     </style>
 </head>
 <body class="text-gray-800">
-
+    
+    <div id="mobile-warning" class="fixed inset-0 z-[20000] bg-black text-red-500 flex flex-col items-center justify-center p-8 text-center md:hidden">
+        <div class="border-4 border-red-500 p-6 rounded-xl bg-gray-900 shadow-[0_0_30px_rgba(255,0,0,0.5)]">
+            <span class="text-6xl mb-4 block">⚠️ TERMINAL RESTRICTION ⚠️</span>
+            <h2 class="text-3xl font-black uppercase mb-4">Incompatible Hardware Detected</h2>
+            <p class="text-xl text-white font-bold mb-6">
+                This protocol requires a <span class="text-red-400">Desktop Environment</span> for full encryption and maximum pizzazz. 💅
+            </p>
+            <div class="space-y-4">
+                <p class="text-gray-400 italic">Please reopen this link on a computer for the intended experience.</p>
+                <button onclick="document.getElementById('mobile-warning').style.setProperty('display', 'none', 'important')" class="text-sm border border-gray-600 text-gray-500 px-4 py-2 rounded hover:text-white transition-colors">
+                    Ignore Warning (Proceed at your own risk)
+                </button>
+            </div>
+        </div>
+    </div>
+    
     <!-- BULLY BITE POPUP -->
     <div id="bully-popup" class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-red-600 text-white p-8 rounded-3xl shadow-[0_0_50px_rgba(255,0,0,0.7)] z-[10000] hidden flex-col items-center text-center w-11/12 max-w-md border-8 border-black">
         <span class="text-7xl mb-4 animate-bounce">🦷💥</span>
@@ -573,7 +589,7 @@
             {
                 header: "Clinical Diagnostics 🩺",
                 type: 'text',
-                q: "On our first date, things didn't go as planned because we couldn't get in here. To find the name, you have to use your clinical knowledge.<br><br>Combine the first word of your future job with another word as a hint. This will give you the category of the location. From there, identify the specific name of the establishment in the alley.<br><br>What is the name of the place? 🚪🍸",
+                q: "On our first date, things didn't go as planned because we couldn't get in here. Your future job with another word is a hint. What is the name of the place? 🚪🍸",
                 correct: "Teddy Roe's"
             }
         ];
@@ -1117,4 +1133,5 @@
 
     </script>
 </body>
+
 </html>
