--- a/index.html
+++ b/index.html
@@ -220,22 +220,6 @@
 </head>
 <body class="text-gray-800">
     
-    <div id="mobile-warning" class="fixed inset-0 z-[20000] bg-black text-red-500 flex flex-col items-center justify-center p-8 text-center md:hidden">
-        <div class="border-4 border-red-500 p-6 rounded-xl bg-gray-900 shadow-[0_0_30px_rgba(255,0,0,0.5)]">
-            <span class="text-6xl mb-4 block">⚠️ TERMINAL RESTRICTION ⚠️</span>
-            <h2 class="text-3xl font-black uppercase mb-4">Incompatible Hardware Detected</h2>
-            <p class="text-xl text-white font-bold mb-6">
-                This protocol requires a <span class="text-red-400">Desktop Environment</span> for full encryption and maximum pizzazz. 💅
-            </p>
-            <div class="space-y-4">
-                <p class="text-gray-400 italic">Please reopen this link on a computer for the intended experience.</p>
-                <button onclick="document.getElementById('mobile-warning').style.setProperty('display', 'none', 'important')" class="text-sm border border-gray-600 text-gray-500 px-4 py-2 rounded hover:text-white transition-colors">
-                    Ignore Warning (Proceed at your own risk)
-                </button>
-            </div>
-        </div>
-    </div>
-    
     <!-- BULLY BITE POPUP -->
     <div id="bully-popup" class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-red-600 text-white p-8 rounded-3xl shadow-[0_0_50px_rgba(255,0,0,0.7)] z-[10000] hidden flex-col items-center text-center w-11/12 max-w-md border-8 border-black">
         <span class="text-7xl mb-4 animate-bounce">🦷💥</span>
@@ -253,11 +237,17 @@
     <div id="intro-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-900 bg-opacity-80">
         <div class="bg-white p-8 rounded-2xl max-w-md w-11/12 shadow-2xl border-4 border-pink-400">
             <h2 class="text-3xl font-black mb-4 text-pink-600">Wait a second... 🛑</h2>
-            <p class="mb-6 text-gray-700 text-lg font-bold">
-                You really shouldn't click on random links. Security 101. 🤦‍♀️
-                <br><br>
-                Anyways, glad you're here! 😉✨
-            </p>
+            <div class="mb-6 text-gray-700 text-lg font-bold space-y-4">
+                <p>
+                    You really shouldn't click on random links. Security 101. 🤦‍♀️
+                </p>
+                <p class="text-red-500 bg-red-50 p-3 rounded-lg border-2 border-dashed border-red-200 text-base">
+                    ⚠️ <b>System Note:</b> This protocol is highly optimized for desktop. For maximum pizzazz, please open on a computer.
+                </p>
+                <p>
+                    Anyways, glad you're here! 😉✨
+                </p>
+            </div>
             <div class="flex justify-end">
                 <button onclick="startCaptcha()" class="btn-primary hover:scale-105">
                     Proceed ➡️
@@ -1135,3 +1125,4 @@
 </body>
 
 </html>
+
