--- a/index.html
+++ b/index.html
@@ -668,8 +668,7 @@
                 <div class="bg-blue-50 p-6 rounded-xl border-l-4 border-blue-400">
                     <h4 class="font-bold text-xl text-blue-900 mb-2">The Look: Country-esque</h4>
                     <p class="text-gray-700 text-lg mb-4">
-                        Think: "I might ride a horse later, but I also look cute." <br>
-                        <strong>Jeans + Flannel = Win.</strong>
+                        Brind a jacket it might get cold!!❄️ <br>
                     </p>
                     
                     <div class="bg-white p-4 rounded-lg border border-blue-200">
@@ -1340,3 +1339,4 @@
 </body>
 
 </html>
+
